--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-rating": "^2.0.5",
     "react-slick": "^0.30.2",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "typescript": "5.6.3"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
